# UMPIRE

./: .coveragerc  .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: code-coverage.yml  tests.yml
notebooks/: 01_umpire_algorithm_step_by_step.ipynb  02_umpire_tests_with_simulated_data.ipynb  tests_using_simulated_data.ipynb  umpire_algorithm_step_by_step.ipynb  umpire_magnitude_weighted_omega_star.ipynb  umpire_tests_with_simulated_data.ipynb
src/umpire/: __init__.py  _umpire_input_handling.py  phase2frequency.py  umpire.py  utils.py
test/: test_handle_UMPIRE_input.py
tests/: test_handle_UMPIRE_input.py  test_phase2frequency.py  test_umpire.py
