[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umpire"
version = "0.1"
requires-python = ">=3.7.0"
dependencies = [
    "numpy >= 1.19.5",
    "scipy >= 1.7.3",
    "tqdm  >= 4.64.1"
]
readme = "README.md"
license = {text="MIT License"}
description = "Implementation of the UMPIRE algorithm from Robinson et al. DOI: 10.1002/mrm.24897"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]
authors = [
  {name="Andre Wendlinger", email="andre.wendlinger@tum.de"},
]

[project.optional-dependencies]
dev = [
  "pip-tools >= 6.12.1",
  "black >= 22.12.0",
  "pytest >= 7.2",
  "pytest-cov >= 4.0.0",
  "tox >= 4.1.2"
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=umpire --cov-config=.coveragerc"
testpaths = [
  "tests",
]

